--- a/src/components/TodoListTemplate.css
+++ b/src/components/TodoListTemplate.css
@@ -11,13 +11,13 @@
     font-size: 2.5rem;
     text-align: center;
     font-weight: 100;
-    background: #cc5de8;;
+    background: #845ef7;;
     color: white;
   }
   
   .form-wrapper {
     padding: 1rem;
-    border-bottom: 1px solid #cc5de8;
+    border-bottom: 1px solid #845ef7;
   }
   
   .todos-wrapper {
